examples/test/testpolicy8177.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8177
  namespace: namespace35
spec:
  podSelector:
    matchLabels:
      key31: value35
      key25: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value13
          key34: value47
      podSelector:
        matchLabels:
          key23: value40
          key45: value11
          key20: value15
